--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.5",
     "firebase": "^10.13.2",
     "lucide-react": "^0.439.0",
     "react": "^18.2.0",
