--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@auth0/auth0-react": "^2.2.4",
     "@hookform/resolvers": "^3.9.0",
     "@huggingface/inference": "^2.8.0",
+    "@radix-ui/colors": "^3.0.0",
+    "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@reactour/tour": "^3.7.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.20.5",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
